[project]
name = "Better-Discord-Quiz-Bot"
description = "Discord bot designed to facilitate interactive quizzes within a Discord Server."
readme = "README.md"
version = "2026.0.0"
authors = [{name = "Michael P"}, {name = "Oliver K"}]
requires-python = ">= 3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "astroid==4.0.1",
    "attrs==25.4.0",
    "dill==0.4.0",
    "discord==2.3.2",
    "discord.py==2.6.4",
    "dotenv==0.9.9",
    "frozenlist==1.8.0",
    "idna==3.11",
    "isort==7.0.0",
    "mccabe==0.7.0",
    "multidict==6.7.0",
    "platformdirs==4.5.0",
    "propcache==0.4.1",
    "pylint==4.0.2",
    "python-dotenv==1.2.1",
    "tomlkit==0.13.3",
    "typing_extensions==4.15.0",
    "yarl==1.22.0",
]

[project.urls]
Repository = "https://github.com/micfun123/Better-Discord-Quiz-Bot"
